--- a/assignment2.html
+++ b/assignment2.html
@@ -16,7 +16,7 @@
   </tr>
   <tr>
     <td><strong>Hobbies</strong></td>
-    <td>Traveling, taking photos, crocheting, and learning new languages!</td>
+    <td>Travelling, taking photos, crocheting, and learning new languages!</td>
   </tr>
 </table>
 
